--- a/styles2.css
+++ b/styles2.css
@@ -14,18 +14,19 @@ body {
 }
 #title {
   margin-top: 15px;
-  height: 20px;
-  margin-bottom: 10px;
+  font-size: 20px;
+  margin-bottom: 5px;
 }
 
 #subtitle {
-  height: 16px;
+  font-size: 16px;
   margin-bottom: 15px;
 }
 
 #selectButton, #selectButton2 {
   border-radius: 3px;
   height: 24px;
+  font-size: 12px;
   text-align: center;
   color: navy;
   background-color: #f9f9f9;
@@ -38,7 +39,6 @@ body {
   height: 400px;
   width: 370px;
   background-color: papayawhip;
-  border: 1px solid darkred;
 }
 
  @media screen and (min-width:767px) and (min-aspect-ratio: 1.2) {
@@ -46,39 +46,38 @@ body {
  #canvas_bubbles {
    height: 450px;
    width: 580px;
-   border: 2px darkgreen solid;
  }
  #title {
-   height: 25px;
+   font-size: 25px;
  }
  #subtitle {
-   height: 20px;
+   font-size: 20px;
  }
  #selectButton, #selectButton2 {
    height: 28px;
+   font-size: 14px;
  }
 }
 @media screen and (min-width:767px) and (max-aspect-ratio: 0.9) {
 #canvas_bubbles {
   height: 650px;
   width: 520px;
-  border: 2px lime solid;
 }
 }
  @media screen and (min-width:1050px) and (min-aspect-ratio:1.4){
    #canvas_bubbles {
   height: 570px;
   width: 820px;
-  border: 2px orange solid;
 }
    #title {
-   height: 30px;
+   font-size: 30px;
  }
  #subtitle {
-   height: 24px;
+   font-size: 24px;
  }
  #selectButton, #selectButton2 {
    height: 32px;
+   font-size: 16px;
 }
  }
 
@@ -91,16 +90,16 @@ body {
    #canvas_bubbles {
     height: 720px;
     width: 1020px;
-    border: 2px purple solid;
    }
    #title {
-   height: 40px;
+   font-size: 40px;
  }
  #subtitle {
-   height: 32px;
+   font-size: 32px;
  }
  #selectButton, #selectButton2 {
    height: 40px;
+   font-size: 20px;
  }
  } 
 @media screen and (min-width:1238px) and (max-aspect-ratio: 0.9){
